# otus_cpp_lesson_08

./: .travis.yml  CMakeLists.txt  Doxyfile
html/: annotated.html  classes.html  dir_451b1ec5dee2ba431d02e5f3cb92fa5b.html  dir_451b1ec5dee2ba431d02e5f3cb92fa5b_dep.map  dir_451b1ec5dee2ba431d02e5f3cb92fa5b_dep.md5  dir_bf93b4910fdf2e1f8765b330ea3b6cf9.html  dir_bf93b4910fdf2e1f8765b330ea3b6cf9_dep.map  dir_bf93b4910fdf2e1f8765b330ea3b6cf9_dep.md5  dir_f84b9bbdd9509e4b3f73313637c96e25.html  dir_f84b9bbdd9509e4b3f73313637c96e25_dep.map  dir_f84b9bbdd9509e4b3f73313637c96e25_dep.md5  files.html  globals.html  globals_func.html  graph_legend.html  hierarchy.html  index.html  inherit_graph_0.map  inherit_graph_0.md5  inherit_graph_1.map  inherit_graph_1.md5  inherits.html  ip__printer_8h.html  ip__printer_8h__incl.map  ip__printer_8h__incl.md5  ip__printer_8h_source.html  namespacedetail.html  namespaces.html  structdetail_1_1is__container.html  structdetail_1_1is__container_3_01std_1_1list_3_01_t_00_01_allocator_01_4_01_4.html  structdetail_1_1is__container_3_01std_1_1list_3_01_t_00_01_allocator_01_4_01_4__coll__graph.md5  structdetail_1_1is__container_3_01std_1_1list_3_01_t_00_01_allocator_01_4_01_4__inherit__graph.map  structdetail_1_1is__container_3_01std_1_1vector_3_01_t_00_01_allocator_01_4_01_4.html  structdetail_1_1is__container_3_01std_1_1vector_3_01_t_00_01_allocator_01_4_01_4__inherit__graph.map  structdetail_1_1is__container_3_01std_1_1vector_3_01_t_00_01_allocator_01_4_01_4__inherit__graph.md5  (+8 more)
ip_printer/: CMakeLists.txt
ip_printer/src/: ip_printer.cpp
(+9 files in other folders)
